poke: make .info type accept an expression or type specifier
Until now the

  .info type NAME

dot-command would accept the name of a Poke type.  This is not nice,
because the following didn't work:

  .info type int<32>
  .info type int[]
  .info type 23

This patch makes the .info type dot-command to accept either a Poke
expression or a Poke type specifier and DTRT.

2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (pk_cmd_info_type): Get a Poke expression as
	the argument for .info type.
	* poke/pk-help.pk: Update help of .info type.
	* doc/poke.texi (info command): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-def.c (pk_cmd_info_type): Get a Poke expression as
+	the argument for .info type.
+	* poke/pk-help.pk: Update help of .info type.
+	* doc/poke.texi (info command): Likewise.
+
+2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-info.pk (pk_info_type): Style sections.
 
 2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>
