pickles: new pickle linux.pk and little fix in ios.pk
This patch:

- Adds a new pickle linux.pk, with kernel data structures.  At the
  moment it is just Linux_Version_Code.

- Little fix in ios_dump_bytes, that makes dump :val to use the right
  IO space, i.e. the one where the given value is mapped.

2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/linux.pk: New file.
	* pickles/Makefile.am (dist_pickles_DATA): Distribute linux.pk.
	* pickles/ios.pk (ios_dump_bytes): Always use the IOS of :val if
	present.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/linux.pk: New file.
+	* pickles/Makefile.am (dist_pickles_DATA): Distribute linux.pk.
+	* pickles/ios.pk (ios_dump_bytes): Always use the IOS of :val if
+	present.
+
+2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* doc/poke.texi (Field Labels): Document that field labels should
 	be specified after constraint expressions and initialization field
 	values.
