poke: change handling of IOS identifiers in dot-commands
IO spaces are characterized by an unique identifier, which is a
positive integer.  Up to now, in poke we have been using the notion of
"IO space tag", with the form #N, where N is the IO space identifier.

The several dot-commands getting IO spaces as arguments got these
arguments as "tags", like for example:

  .ios #23

for changing the current IO space to the one with Id 23.  Now,
however, we have support in poke for referring to IO spaces by name
using the $<...> construct.

This patch changes the several dot-commands that get IO spaces as
arguments in order to get arbitrary Poke expressions instead of tags.
This makes it possible to refer to IO space identifiers directly as
Poke integers, or stored in variables, or by name using $<...>.

Examples:

(poke) .ios $</bin/ls>
(poke) .map create foo, 2 + 1
(poke) .map create bar, variable_with_ios_id

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (expr_to_ios): New function.
	(pk_cmd_close): Get a Poke expression as an
	argument intead of an IOS tag.
	(pk_cmd_sub): Likewise.
	(pk_cmd_ios): Likewise.
	* poke/pk-cmd-map.c (pk_cmd_map_remove): Likewise.
	(pk_cmd_map_create): Likewise.
	(pk_cmd_map_show): Likewise.
	(pk_cmd_map_entry_add): Likewise.
	(pk_cmd_map_entry_remove): Likewise.
	(pk_cmd_map_load): Likewise.
	(pk_cmd_info_maps): Likewise.
	* testsuite/poke.cmd/extract-1.pk: Adapt test accordingly.
	* testsuite/poke.cmd/close-sub-1.pk: Likewise.
	* testsuite/poke.map/ass-map-22.pk: Likewise.
	* testsuite/poke.pkl/ios-cur-1.pk: Likewise.
	* testsuite/poke.cmd/ios-1.pk: Likewise.
	* testsuite/poke.cmd/sub-2.pk: Likewise.
	* testsuite/poke.cmd/sub-2.pk: Likewise.
	* testsuite/poke.cmd/maps-3.pk: Likewise.
	* testsuite/poke.cmd/maps-4.pk: Likewise.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.
	* testsuite/poke.cmd/maps-7.pk: Likewise.
	* testsuite/poke.cmd/maps-2.pk: Likewise.
	* testsuite/poke.cmd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-cmd-ios.c (expr_to_ios): New function.
+	(pk_cmd_close): Get a Poke expression as an
+	argument intead of an IOS tag.
+	(pk_cmd_sub): Likewise.
+	(pk_cmd_ios): Likewise.
+	* poke/pk-cmd-map.c (pk_cmd_map_remove): Likewise.
+	(pk_cmd_map_create): Likewise.
+	(pk_cmd_map_show): Likewise.
+	(pk_cmd_map_entry_add): Likewise.
+	(pk_cmd_map_entry_remove): Likewise.
+	(pk_cmd_map_load): Likewise.
+	(pk_cmd_info_maps): Likewise.
+	* testsuite/poke.cmd/extract-1.pk: Adapt test accordingly.
+	* testsuite/poke.cmd/close-sub-1.pk: Likewise.
+	* testsuite/poke.map/ass-map-22.pk: Likewise.
+	* testsuite/poke.pkl/ios-cur-1.pk: Likewise.
+	* testsuite/poke.cmd/ios-1.pk: Likewise.
+	* testsuite/poke.cmd/sub-2.pk: Likewise.
+	* testsuite/poke.cmd/sub-2.pk: Likewise.
+	* testsuite/poke.cmd/maps-3.pk: Likewise.
+	* testsuite/poke.cmd/maps-4.pk: Likewise.
+	* testsuite/poke.cmd/maps-5.pk: Likewise.
+	* testsuite/poke.cmd/maps-6.pk: Likewise.
+	* testsuite/poke.cmd/maps-7.pk: Likewise.
+	* testsuite/poke.cmd/maps-2.pk: Likewise.
+	* testsuite/poke.cmd/maps-7.pk: Likewise.
+	* testsuite/poke.cmd/maps-8.pk: Likewise.
+	* testsuite/poke.cmd/maps-9.pk: Likewise.
+	* testsuite/poke.cmd/file-mode.pk: Likewise.
+	* testsuite/poke.cmd/file-bias-1.pk: Likewise.
+	* testsuite/poke.cmd/file-bias-2.pk: Likewise.
+	* testsuite/poke.cmd/file-relative.pk: Likewise.
+	* doc/poke.texi: Update documentation on IO space tags and ids.
+
 2023-10-30  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-help.pk (pk_help): Hint at activating the page at the
