--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poke/pk-ios.c (pk_ios_alien_token_handler): Fix handling of
+	alien tokens of length 1, i.e. $<.> tokens.
+
 2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-cmd.h (enum pk_cmd_arg_type): Remove PK_CMD_ARG_TAG.
