poke-cmd-editor.c: stylize the poke prompt
When the .edit command returns it has to redraw the prompt.  Make sure
it stylizes it using the "prompt" styling class.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-editor.c (pk_cmd_editor): Stylize the prompt.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-cmd-editor.c (pk_cmd_editor): Stylize the prompt.
+
 2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/libpoke.h (pk_ios_search): Add new param: FLAGS to support
