--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2023-11-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.c (pkl_gen_ps_var): Fix detection of
+	non-methods.
+	* testsuite/poke.pkl/optcond-pre-13.pk: New test.
+	* testsuite/poke.pkl/optcond-pre-14.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2023-11-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/poke.pk (pk_exception_handler): Fix styling.
 
 2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>
