libpoke,common: split suffix printing from `PK_PRINT_BINARY'
This commit makes `PK_PRINT_BINARY' macro more Jitter-friendly by
removing the conditional call of `pk_integral_suffix' function and
moving that logic to a different macro.

At the moment, in pvm.jitter, the `pk_integral_suffix' invocation
(through `PK_PRINT_BINARY' macro) is dead code (under `if (0)') so
there's no need to put the function in the `wrapped-functions'
sections (doing so will cause `make syntax-check' to fail on
non-x86_64 platforms).
So the fix is to remove `pk_integral_suffix' invocation from the macro.

2023-11-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* common/pk-utils.h (PK_INTEGRAL_SUFFIX): New macro.
	(pk_integral_suffix): Remove function declaration.
	(PK_PRINT_BINARY): Remove `use_suffix_p' parameter. And don't print
	the suffix.
	* common/pk-utils.c (PK_INTEGRAL_SUFFIX): Remove function definition.
	* libpoke/pvm-val.c (pvm_print_val_1): Update use of `PK_PRINT_BINARY'
	and use `PK_INTEGRAL_SUFFIX'.
	* libpoke/pvm.jitter (wrapped-functions): Remove `pk_integral_suffix'.
	(PVM_PRINTI): Update use of `PK_PRINT_BINARY'.
	(PVM_PRINTL): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2023-11-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* common/pk-utils.h (PK_INTEGRAL_SUFFIX): New macro.
+	(pk_integral_suffix): Remove function declaration.
+	(PK_PRINT_BINARY): Remove `use_suffix_p' parameter. And don't print
+	the suffix.
+	* common/pk-utils.c (PK_INTEGRAL_SUFFIX): Remove function definition.
+	* libpoke/pvm-val.c (pvm_print_val_1): Update use of `PK_PRINT_BINARY'
+	and use `PK_INTEGRAL_SUFFIX'.
+	* libpoke/pvm.jitter (wrapped-functions): Remove `pk_integral_suffix'.
+	(PVM_PRINTI): Update use of `PK_PRINT_BINARY'.
+	(PVM_PRINTL): Likewise.
+
 2023-11-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* common/pk-utils.h (pk_print_binary): Remove function decl.
