--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* pickles/btf.pk (BTF_Array): Use BTF_Type_Id for index_type.
+
 2023-11-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/libpoke.h (struct pk_term_if): Add `pk_compiler' parameter
