--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/srec.pk (srec_encode): Create start address records.
+
+2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/btf.pk (BTF_Array): Use BTF_Type_Id for index_type.
 
 2023-11-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
