pk-hserver: unregister threads before exitting them
2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.c (hserver_thread_worker): Call
	pk_unregister_thread before pthread_exit.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-hserver.c (hserver_thread_worker): Call
+	pk_unregister_thread before pthread_exit.
+
+2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/srec.pk (srec_encode): Create start address records.
 
 2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>
